// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`form-control-file Renders with all props provided 1`] = `
<form-control-file exportparts="label,input,input-invalid">
  <div class="d-flex flex-column form-group">
    <label class="form-label" htmlfor="resume" part="label">
      Resume
    </label>
    <input class="form-control is-invalid" disabled="" name="resume" part="input input-invalid " type="file">
    <small class="form-text text-muted" id="form-help-text-resume" part="input-help-text">
      Upload your resume in PDF format
    </small>
    <small class="form-text text-danger" id="form-error-text-resume" part="input-error-text">
      Invalid file type
    </small>
  </div>
</form-control-file>
`;

exports[`form-control-file Renders with default props 1`] = `
<form-control-file exportparts="label,input,input-invalid">
  <div class="d-flex flex-column form-group">
    <label class="form-label" htmlfor="profilePicture" part="label">
      Profile Picture
    </label>
    <input class="form-control" name="profilePicture" part="input " type="file">
  </div>
</form-control-file>
`;
